Вносит правки по базовой стилизации

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,8 +1,6 @@
+@use "blocks/page.scss";
 @use "blocks/main-header.scss";
 @use "blocks/main-nav.scss";
-@use "blocks/site-list.scss";
-@use "blocks/user-list.scss";
-@use "blocks/promo-list.scss";
 @use "blocks/title.scss";
 @use "blocks/categories-list.scss";
 @use "blocks/inner-header.scss";
