--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,6 +1,4 @@
 .button {
-  font-family: "Open Sans", sans-serif;
-  font-style: normal;
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
@@ -8,7 +6,7 @@
   text-transform: uppercase;
   text-decoration: none;
   color: #444444;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   border: 2px solid #444444;
   padding: 16px 0;
 
