--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,3 +1,24 @@
-.main-nav {
+.main-nav__list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  font-size: 17px;
 
+  &--promo {
+    font-size: 15px;
+  }
+}
+
+.main-nav__link {
+  font-weight: 700;
+  color: #000000;
+  text-decoration: none;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
