--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,16 +1,16 @@
 .reviews {
-  font-family: "Open Sans", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 15px;
   line-height: 30px;
-  color: #444444;
+}
+
+.reviews__item {
+  margin: 0;
 }
 
 .reviews__author-info {
   font-size: 17px;
   line-height: 30px;
   font-style: normal;
+  color: #000;
 }
 
 .reviews__author-name {
