--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,23 +1,4 @@
-@font-face {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  src:
-    url("../fonts/opensans.woff2") format("woff2"),
-    url("../fonts/opensans.woff") format("woff");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 700;
-  src:
-    url("../fonts/opensansbold.woff2") format("woff2"),
-    url("../fonts/opensansbold.woff") format("woff");
-  font-display: swap;
-}
-
+@use "global/fonts.scss";
 @use "blocks/page.scss";
 @use "blocks/main-header.scss";
 @use "blocks/main-nav.scss";
