Правит заглавные буквы в цветах

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -6,17 +6,17 @@
   text-transform: uppercase;
   text-decoration: none;
   color: #444444;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border: 2px solid #444444;
   padding: 16px 0;
 
   &:hover {
-    color:#FFFFFF;
+    color: #ffffff;
     background-color: #444444;
   }
 
   &:active {
-    color:#FFFFFF;
+    color: #ffffff;
     background-color: #444444;
     opacity: 0.3;
   }
