--- a/source/sass/blocks/email-link.scss
+++ b/source/sass/blocks/email-link.scss
@@ -1,5 +1,5 @@
 .email-link {
-  border-bottom: 1px solid #62D1BA;
+  border-bottom: 1px solid #62d1ba;
   color: inherit;
   text-decoration: none;
 }
