--- a/source/sass/blocks/categories-list.scss
+++ b/source/sass/blocks/categories-list.scss
@@ -8,14 +8,14 @@
   font-weight: 700;
   font-size: 20px;
   line-height: 30px;
-  color: #FFFFFF;
+  color: #ffffff;
   text-decoration: none;
 
   &--decor {
-    background-color:#63D1BB;
+    background-color: #63d1bb;
   }
 
   &--toys {
-    background-color:#46C1AE;
+    background-color: #46c1ae;
   }
 }
