--- a/source/sass/blocks/features-list.scss
+++ b/source/sass/blocks/features-list.scss
@@ -8,6 +8,6 @@
   font-weight: 700;
   font-size: 17px;
   line-height: 20px;
-  color: #000000;
-  padding-top: 83px;
+  color: $primary-color;
+  padding-top: 85px;
 }
