--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -2,6 +2,6 @@
   font-weight: 700;
   font-size: 19px;
   line-height: 18px;
-  color: #000000;
+  color: $secondary-color;
   text-decoration: none;
 }
