--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,9 +1,9 @@
 .page {
-  font-family: "Open Sans", sans-serif;
+  font-family: $font-family;
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
   line-height: 24px;
-  color: #444444;
-  background-color: #ffffff;
+  color: $primary-color;
+  background-color: $white;
 }
