--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -10,7 +10,7 @@
   font-size: 17px;
   line-height: 30px;
   font-style: normal;
-  color: #000000;
+  color: $secondary-color;
 }
 
 .reviews__author-name {
