--- a/source/sass/blocks/email-link.scss
+++ b/source/sass/blocks/email-link.scss
@@ -1,5 +1,13 @@
 .email-link {
-  border-bottom: 1px solid #62d1ba;
+  border-bottom: 1px solid $accent-color;
   color: inherit;
   text-decoration: none;
+
+  &:hover {
+    color: $link-hover-color;
+  }
+
+  &:active {
+    color: $link-hover-color;
+  }
 }
