--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -2,11 +2,11 @@
   font-weight: 700;
   font-size: 17px;
   line-height: 18px;
-  color: #000000;
+  color: $secondary-color;
 }
 
 .form__title {
-  color: #63d1bb;
+  color: $accent-color;
 }
 
 .form__group {
@@ -21,5 +21,5 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 16px;
-  color: #444444;
+  color: $primary-color;
 }
