--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -1,6 +1,6 @@
 .product-card__link {
   text-decoration: none;
-  color: #000000;
+  color: $secondary-color;
 
   &:hover {
     opacity: 0.6;
@@ -15,7 +15,7 @@
   font-weight: 700;
   font-size: 17px;
   line-height: 24px;
-  color: #000000;
+  color: $secondary-color;
 }
 
 .product-card__info {
@@ -25,5 +25,5 @@
 
 .product-card__price {
   font-weight: 700;
-  color: #000000;
+  color: $secondary-color;
 }
