--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -2,7 +2,7 @@
   font-weight: 700;
   font-size: 27px;
   line-height: 30px;
-  color: #000000;
+  color: $secondary-color;
   padding: 0;
   margin: 0;
 }
