--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,23 +1,24 @@
-@use "global/fonts.scss";
-@use "blocks/page.scss";
-@use "blocks/main-header.scss";
-@use "blocks/main-nav.scss";
-@use "blocks/title.scss";
-@use "blocks/categories-list.scss";
-@use "blocks/inner-header.scss";
-@use "blocks/special.scss";
-@use "blocks/table.scss";
-@use "blocks/button.scss";
-@use "blocks/features.scss";
-@use "blocks/features-list.scss";
-@use "blocks/reviews.scss";
-@use "blocks/contacts.scss";
-@use "blocks/email-link.scss";
-@use "blocks/main-footer.scss";
-@use "blocks/social-list.scss";
-@use "blocks/catalog.scss";
-@use "blocks/product-card.scss";
-@use "blocks/production.scss";
-@use "blocks/order.scss";
-@use "blocks/form.scss";
-@use "blocks/visually-hidden.scss";
+@import "global/fonts.scss";
+@import "global/global.scss";
+@import "global/variables.scss";
+@import "blocks/page.scss";
+@import "blocks/main-header.scss";
+@import "blocks/main-nav.scss";
+@import "blocks/title.scss";
+@import "blocks/categories-list.scss";
+@import "blocks/inner-header.scss";
+@import "blocks/special.scss";
+@import "blocks/table.scss";
+@import "blocks/button.scss";
+@import "blocks/features.scss";
+@import "blocks/features-list.scss";
+@import "blocks/reviews.scss";
+@import "blocks/contacts.scss";
+@import "blocks/email-link.scss";
+@import "blocks/main-footer.scss";
+@import "blocks/social-list.scss";
+@import "blocks/catalog.scss";
+@import "blocks/product-card.scss";
+@import "blocks/production.scss";
+@import "blocks/order.scss";
+@import "blocks/form.scss";
