Добавляет адаптивную сетку главной страницы

--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,18 +1,37 @@
+.main-nav {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-nav__logo {
+  align-self: center;
+  padding: 22px 0;
+}
+
 .main-nav__list {
   list-style-type: none;
   padding: 0;
   margin: 0;
   font-size: 17px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 
   &--promo {
     font-size: 15px;
+    display: none;
   }
 }
 
 .main-nav__link {
   font-weight: 700;
   color: $secondary-color;
+  background-color: $white;
   text-decoration: none;
+  box-shadow: 0 1px 0 $border-color, inset 0 1px 0 $border-color;
+  display: block;
+  padding: 30px 0 30px 75px;
 
   &:hover {
     opacity: 0.6;
@@ -20,5 +39,128 @@
 
   &:active {
     opacity: 0.3;
+  }
+}
+
+.main-nav__text {
+  display: none;
+}
+
+.main-nav__toggle {
+  position: absolute;
+  top: 32px;
+  right: 31px;
+}
+
+@media (min-width: $tablet-width) {
+  .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav {
+    flex-direction: row;
+  }
+
+  .main-nav__logo {
+    padding: 22px 0 20px;
+  }
+
+  .main-nav__list {
+    flex-direction: row;
+
+    &--site {
+      position: absolute;
+      bottom: -64px;
+
+      .main-nav__link {
+        padding: 20px 0;
+        width: 167px;
+        font-size: 15px;
+        line-height: 24px;
+      }
+    }
+
+    &--user {
+      max-width: 400px;
+      margin-left: auto;
+
+      .main-nav__link {
+        border-left: 1px solid $border-color;
+      }
+    }
+  }
+
+  .main-nav__link {
+    padding: 32px 0 31px;
+    box-shadow: none;
+
+    &--search {
+      width: 82px;
+      height: 100%;
+      padding: 0;
+
+      span {
+        display: none;
+      }
+    }
+
+    &--cart {
+      padding-left: 53px;
+    }
+  }
+
+  .main-nav__text {
+    display: block;
+    position: absolute;
+    right: 0;
+    bottom: -44px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .main-nav {
+    justify-content: space-between;
+  }
+
+  .main-nav__list {
+    &--site {
+      position: static;
+      order: -1;
+      max-width: 410px;
+
+      .main-nav__link {
+        padding: 32px 0 31px;
+        width: 184px;
+        border-left: 1px solid $border-color;
+        padding-left: 35px;
+
+        &--catalog {
+          padding-left: 0;
+          border: none;
+        }
+      }
+    }
+
+    &--promo {
+      display: flex;
+      max-width: 700px;
+      position: absolute;
+      bottom: -66px;
+      left: 0;
+
+      .main-nav__item:not(:last-child) {
+        margin-right: 35px;
+      }
+
+      .main-nav__link {
+        padding: 20px 0;
+        width: 184px;
+      }
+    }
+
+    &--user {
+      margin: 0;
+      max-width: 320px;
+    }
   }
 }
