--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -10,3 +10,7 @@ $background-section-color: #f1f1f1;
 $play-button-color: #63d1bb;
 
 $font-family: "Open Sans", "Arial", sans-serif;
+
+$mobile-width-only: 767px;
+$tablet-width: 768px;
+$desktop-width: 1150px;
