--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -9,6 +9,7 @@
   background-color: $white;
   border: 2px solid $primary-color;
   padding: 16px 0;
+  display: block;
 
   &:hover {
     color: $white;
