--- a/source/sass/blocks/categories-list.scss
+++ b/source/sass/blocks/categories-list.scss
@@ -2,14 +2,19 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .categories-list__link {
   font-weight: 700;
-  font-size: 20px;
-  line-height: 30px;
+  font-size: 19px;
+  line-height: 24px;
   color: $white;
   text-decoration: none;
+  display: block;
+  padding: 24px 160px 31px 30px;
+
 
   &--decor {
     background-color: $accent-color;
@@ -17,5 +22,27 @@
 
   &--toys {
     background-color: $accent-color-dark;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .categories-list {
+    flex-direction: row;
+  }
+
+  .categories-list__item {
+    width: 50%;
+  }
+
+  .categories-list__link {
+    font-size: 20px;
+    line-height: 30px;
+    padding: 25px 167px 34px 36px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .categories-list__link {
+    padding: 25px 350px 34px 37px;
   }
 }
