--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -1,7 +1,49 @@
+.main-footer {
+  background: $background-section-color;
+}
+
+.main-footer__wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.main-footer__logo {
+  display: none;
+}
+
 .main-footer__copyright {
   font-weight: 700;
   font-size: 19px;
   line-height: 18px;
   color: $secondary-color;
   text-decoration: none;
+  display: block;
+  margin: 0 auto;
+  padding: 30px 0;
+}
+
+@media (min-width: $tablet-width) {
+  .main-footer__wrapper {
+    padding: 50px 50px 60px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .main-footer__logo {
+    display: block;
+    width: 101px;
+    height: 34px;
+    outline: 3px solid #ff0000;
+  }
+
+  .main-footer__social {
+    width: 142px;
+  }
+
+  .main-footer__copyright {
+    width: 180px;
+    margin: 0;
+    padding: 0;
+  }
 }
