--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -6,4 +6,12 @@
   line-height: 24px;
   color: $primary-color;
   background-color: $white;
+  margin: 0;
+}
+
+
+@media (min-width: $desktop-width) {
+  .page__main {
+    margin-top: 105px;
+  }
 }
