--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -1,5 +1,28 @@
 .social-list {
   list-style-type: none;
-  padding: 0;
   margin: 0;
+  display: flex;
+  justify-content: center;
+  padding: 30px 0;
+}
+
+.social-list__item {
+  width: 30px;
+  height: 20px;
+}
+
+.social-list__item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.social-list__link {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+@media (min-width: $tablet-width) {
+  .social-list {
+    padding: 0;
+  }
 }
