--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -1,8 +1,22 @@
 .title {
   font-weight: 700;
-  font-size: 27px;
+  font-size: 25px;
   line-height: 30px;
   color: $secondary-color;
   padding: 0;
   margin: 0;
+}
+
+@media (min-width: $tablet-width) {
+  .title {
+    font-size: 43px;
+    line-height: 50px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .title {
+    font-size: 53px;
+    line-height: 57px;
+  }
 }
