--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,7 +11,6 @@
 @import "blocks/table.scss";
 @import "blocks/button.scss";
 @import "blocks/features.scss";
-@import "blocks/features-list.scss";
 @import "blocks/reviews.scss";
 @import "blocks/contacts.scss";
 @import "blocks/email-link.scss";
@@ -22,3 +21,4 @@
 @import "blocks/production.scss";
 @import "blocks/order.scss";
 @import "blocks/form.scss";
+@import "blocks/slider.scss";
