--- a/source/sass/blocks/special.scss
+++ b/source/sass/blocks/special.scss
@@ -91,6 +91,9 @@
 @media (min-width: $desktop-width) {
   .special__wrapper {
     padding: 115px 50px 73px;
+    width: 1050px;
+    margin: 0 auto;
+
   }
 
   .special__header {
