--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -81,6 +81,9 @@
 
   .reviews__wrapper {
     padding: 80px 0 100px 175px;
+    width: 1050px;
+    margin: 0 auto;
+    box-sizing: border-box;
   }
 
   .reviews__write {
