--- a/source/sass/blocks/inner-header.scss
+++ b/source/sass/blocks/inner-header.scss
@@ -13,6 +13,8 @@
 
   .inner-header__wrapper {
     padding: 155px 50px 0;
+    width: 668px;
+    margin: 0 auto;
   }
 }
 
@@ -24,6 +26,5 @@
 
   .inner-header__wrapper {
     width: 1050px;
-    margin: 0 auto;
   }
 }
