--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -43,6 +43,8 @@
   .reviews__wrapper {
     padding: 82px 50px 50px;
     position: relative;
+    width: 668px;
+    margin: 0 auto;
   }
 
   .reviews__title {
@@ -82,7 +84,6 @@
   .reviews__wrapper {
     padding: 80px 0 100px 175px;
     width: 1050px;
-    margin: 0 auto;
     box-sizing: border-box;
   }
 
