--- a/source/sass/blocks/special.scss
+++ b/source/sass/blocks/special.scss
@@ -42,6 +42,8 @@
 @media (min-width: $tablet-width) {
   .special__wrapper {
     padding: 40px 50px 52px;
+    width: 668px;
+    margin: 0 auto;
   }
 
   .special__header {
@@ -92,8 +94,6 @@
   .special__wrapper {
     padding: 115px 50px 73px;
     width: 1050px;
-    margin: 0 auto;
-
   }
 
   .special__header {
