--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -19,6 +19,8 @@
 @media (min-width: $tablet-width) {
   .features__wrapper {
     padding: 55px 50px 83px;
+    width: 668px;
+    margin: 0 auto;
   }
 
   .features__list {
@@ -44,7 +46,6 @@
   .features__wrapper {
     padding: 70px 250px 90px 175px;
     width: 1050px;
-    margin: 0 auto;
     box-sizing: border-box;
   }
 }
