--- a/5/css/style.css
+++ b/5/css/style.css
@@ -87,9 +87,6 @@
 .main-nav__link:hover {
   opacity: 0.6;
 }
-.main-nav__link:active {
-  opacity: 0.3;
-}
 
 .main-nav__text {
   display: none;
@@ -277,6 +274,8 @@
 
   .inner-header__wrapper {
     padding: 155px 50px 0;
+    width: 668px;
+    margin: 0 auto;
   }
 }
 @media (min-width: 1150px) {
@@ -287,7 +286,6 @@
 
   .inner-header__wrapper {
     width: 1050px;
-    margin: 0 auto;
   }
 }
 .special__wrapper {
@@ -334,6 +332,8 @@
 @media (min-width: 768px) {
   .special__wrapper {
     padding: 40px 50px 52px;
+    width: 668px;
+    margin: 0 auto;
   }
 
   .special__header {
@@ -382,7 +382,6 @@
   .special__wrapper {
     padding: 115px 50px 73px;
     width: 1050px;
-    margin: 0 auto;
   }
 
   .special__header {
@@ -466,6 +465,8 @@
 @media (min-width: 768px) {
   .features__wrapper {
     padding: 55px 50px 83px;
+    width: 668px;
+    margin: 0 auto;
   }
 
   .features__list {
@@ -488,7 +489,6 @@
   .features__wrapper {
     padding: 70px 250px 90px 175px;
     width: 1050px;
-    margin: 0 auto;
     box-sizing: border-box;
   }
 }
@@ -537,6 +537,8 @@
   .reviews__wrapper {
     padding: 82px 50px 50px;
     position: relative;
+    width: 668px;
+    margin: 0 auto;
   }
 
   .reviews__title {
@@ -575,7 +577,6 @@
   .reviews__wrapper {
     padding: 80px 0 100px 175px;
     width: 1050px;
-    margin: 0 auto;
     box-sizing: border-box;
   }
 
@@ -588,25 +589,30 @@
   }
 }
 .contacts__wrapper {
-  padding: 40px 30px;
+  padding: 40px 0;
 }
 
 .contacts__title {
-  margin-bottom: 28px;
+  margin: 0 0 30px 30px;
 }
 
-.contacts__map {
-  position: relative;
-  left: -30px;
+.contacts__map-wrapper {
   width: 320px;
   height: 450px;
   margin-bottom: 40px;
 }
 
+.contacts__map-iframe {
+  border: none;
+  outline: 3px solid #ff0000;
+  width: 100%;
+  height: 100%;
+}
+
 .contacts__table {
   line-height: 20px;
   border-collapse: collapse;
-  margin-bottom: 60px;
+  margin: 0 30px 60px;
 }
 
 .contacts__table tbody {
@@ -627,11 +633,17 @@
 
 @media (min-width: 768px) {
   .contacts__wrapper {
-    padding: 70px 50px 60px;
+    padding: 70px 0 60px;
+    width: 768px;
+    margin: 0 auto;
   }
 
   .contacts__title {
-    margin-bottom: 50px;
+    margin: 0 0 50px 50px;
+  }
+
+  .contacts__table {
+    margin: 0 50px 50px;
   }
 
   .contacts__table tbody {
@@ -656,8 +668,7 @@
     width: 82px;
   }
 
-  .contacts__map {
-    left: -50px;
+  .contacts__map-wrapper {
     width: 768px;
     height: 457px;
     margin-bottom: 50px;
@@ -670,15 +681,31 @@
 }
 @media (min-width: 1150px) {
   .contacts__wrapper {
-    padding: 150px 50px 105px 175px;
+    padding: 150px 0 105px 175px;
     position: relative;
     width: 1050px;
-    margin: 0 auto;
     box-sizing: border-box;
+  }
+
+  .contacts__title {
+    margin-left: 0;
+  }
+
+  .contacts__table {
+    margin-left: 0;
   }
 
   .contacts__table tbody {
     flex-direction: column;
+  }
+
+  .contacts__map-wrapper {
+    position: absolute;
+    right: 0;
+    bottom: 105px;
+    width: 527px;
+    height: 457px;
+    margin-bottom: 0;
   }
 
   .contacts__map {
@@ -733,6 +760,8 @@
 @media (min-width: 768px) {
   .main-footer__wrapper {
     padding: 50px 50px 60px;
+    width: 668px;
+    margin: 0 auto;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -758,7 +787,6 @@
 @media (min-width: 1150px) {
   .main-footer__wrapper {
     width: 1050px;
-    margin: 0 auto;
   }
 }
 .social-list {
