Добавляет сетку для каталога

--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -27,7 +27,7 @@
 .main-nav__link {
   font-weight: 700;
   color: $secondary-color;
-  background-color: $white;
+  background-color: transparent;
   text-decoration: none;
   box-shadow: 0 1px 0 $border-color, inset 0 1px 0 $border-color;
   display: block;
