--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,9 +1,25 @@
-.catalog__title {
-  background-color: $background-section-color;
-}
-
 .catalog__list {
   list-style-type: none;
   padding: 0;
-  margin: 0;
+  width: 260px;
+  margin: 30px auto;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 30px;
+}
+
+@media (min-width: $tablet-width) {
+  .catalog__list {
+    width: 668px;
+    margin: 67px auto 53px;
+    gap: 54px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog__list {
+    gap: 51px;
+    grid-template-columns: 316px 316px 316px;
+    width: 1050px;
+  }
 }
