--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -1,3 +1,19 @@
+.product-card {
+  display: flex;
+  flex-direction: column;
+}
+
+.product-card__image {
+  width: 260px;
+  height: 195px;
+  outline: 3px solid #ff0000;
+}
+
+.product-card__wrapper {
+  padding: 27px 27px 26px 28px;
+  border: 1px solid $border-color;
+}
+
 .product-card__link {
   text-decoration: none;
   color: $secondary-color;
@@ -16,14 +32,81 @@
   font-size: 17px;
   line-height: 24px;
   color: $secondary-color;
+  margin: 0 0 6px;
 }
 
 .product-card__info {
   font-size: 13px;
   line-height: 30px;
+  margin: 0 0 17px;
+}
+
+.product-card__bottom {
+  display: flex;
+  justify-content: space-between;
 }
 
 .product-card__price {
   font-weight: 700;
   color: $secondary-color;
+}
+
+.product-card__cart-link {
+  width: 20px;
+  height: 19px;
+  outline: 3px solid #ff0000;
+}
+
+@media (min-width: $tablet-width) {
+  .product-card {
+    flex-direction: row;
+  }
+
+  .product-card__image {
+    width: 334px;
+    height: 334px;
+  }
+
+  .product-card__wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 334px;
+    box-sizing: border-box;
+    padding: 27px 32px 25px 34px;
+  }
+
+  .product-card__title {
+    font-size: 20px;
+    line-height: 24px;
+    margin-bottom: 7px;
+  }
+
+  .product-card__info {
+    font-size: 15px;
+  }
+
+  .product-card__bottom {
+    margin-top: auto;
+  }
+
+  .product-card__price {
+    font-size: 17px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .product-card {
+    flex-direction: column;
+  }
+
+  .product-card__image {
+    width: 316px;
+    height: 462px;
+  }
+
+  .product-card__wrapper {
+    width: 100%;
+    padding: 27px 31px 25px 28px;
+    min-height: 197px;
+  }
 }
