--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,4 +22,4 @@
 @import "blocks/order.scss";
 @import "blocks/form.scss";
 @import "blocks/slider.scss";
-@import "blocks/catalog-inner-header.scss";
+@import "blocks/main-inner.scss";
