--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -66,7 +66,7 @@
   &--email {
     width: 100%;
     border: none;
-    box-shadow: inset 0px -2px 0px $secondary-color;
+    box-shadow: inset 0 -2px 0 $secondary-color;
     padding: 17px 10px 17px 0;
   }
 
@@ -200,7 +200,7 @@
     }
 
     &--radio {
-      padding-top:0;
+      padding-top: 0;
     }
   }
 
