--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -8,6 +8,7 @@ $border-color: #ececec;
 $white: #ffffff;
 $background-section-color: #f1f1f1;
 $play-button-color: #63d1bb;
+$toggle-color: #231f20;
 
 $font-family: "Open Sans", "Arial", sans-serif;
 
