Добавляет декоративные элементы на главной

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -2,19 +2,23 @@
   padding: 40px 0;
 }
 
+.contacts__top {
+  width: 260px;
+  margin: 0 auto;
+}
+
 .contacts__title {
-  margin: 0 0 30px 30px;
+  margin: 0 0 30px;
 }
 
 .contacts__map-wrapper {
-  width: 320px;
+  width: 100%;
   height: 450px;
   margin-bottom: 40px;
 }
 
 .contacts__map-iframe {
   border: none;
-  outline: 3px solid #ff0000;
   width: 100%;
   height: 100%;
 }
@@ -22,7 +26,7 @@
 .contacts__table {
   line-height: 20px;
   border-collapse: collapse;
-  margin: 0 30px 60px;
+  margin: 0 0 60px;
 }
 
 .contacts__table tbody {
@@ -32,13 +36,21 @@
 }
 
 .contacts__table td {
-  border-bottom: 1px solid $border-color;
+  border-bottom: none;
   padding: 12px 0;
+
+  &:first-child {
+    width: 76px;
+  }
 }
 
 .contacts__table tr {
   display: flex;
-  justify-content: space-between;
+}
+
+.contacts__write {
+  width: 260px;
+  margin: 0 auto;
 }
 
 @media (min-width: $tablet-width) {
@@ -48,18 +60,34 @@
     margin: 0 auto;
   }
 
+  .contacts__top {
+    width: 668px;
+  }
+
   .contacts__title {
-    margin: 0 0 50px 50px;
+    margin-bottom: 50px;
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: -22px;
+      right: 3px;
+      width: 47px;
+      height: 81px;
+      background-image: url('../img/contacts-flag.svg');
+    }
   }
 
   .contacts__table {
-    margin: 0 50px 50px;
+    margin-bottom: 50px;
   }
 
   .contacts__table tbody {
     font-size: 17px;
     line-height: 30px;
     flex-direction: row;
+    width: auto;
   }
 
   .contacts__table tr {
@@ -86,7 +114,6 @@
 
   .contacts__write {
     width: 230px;
-    margin: 0 auto;
   }
 }
 
@@ -98,12 +125,17 @@
     box-sizing: border-box;
   }
 
-  .contacts__title {
-    margin-left: 0;
+  .contacts__top {
+    width: 331px;
+    margin: 0;
   }
 
-  .contacts__table {
-    margin-left: 0;
+  .contacts__title {
+
+    &::after {
+      right: 0;
+      left: -111px;
+    }
   }
 
   .contacts__table tbody {
