--- a/source/sass/blocks/categories-list.scss
+++ b/source/sass/blocks/categories-list.scss
@@ -14,15 +14,54 @@
   text-decoration: none;
   display: block;
   padding: 24px 160px 31px 30px;
+  position: relative;
 
 
   &--decor {
     background-color: $accent-color;
+
+    &:hover {
+      background-color: $link-hover-color-dark;
+    }
+
+    &:active {
+      background-color: $link-hover-color-dark;
+    }
   }
 
   &--toys {
     background-color: $accent-color-dark;
+
+    &:hover {
+      background-color: $link-hover-color;
+    }
+
+    &:active {
+      background-color: $link-hover-color;
+    }
   }
+}
+
+.categories-list__link-icon {
+  position: absolute;
+  right: 36px;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+  fill: $categories-icon-color;
+  opacity: 0.5;
+}
+
+.categories-list__link--toys .categories-list__link-icon {
+  right: 27px;
+}
+
+.categories-list__link:hover .categories-list__link-icon {
+  opacity: 0.7;
+}
+
+.categories-list__link:active .categories-list__link-icon {
+  opacity: 0.3;
 }
 
 @media (min-width: $tablet-width) {
