--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -1,9 +1,10 @@
 .social-list {
   list-style-type: none;
-  margin: 0;
-  display: flex;
-  justify-content: center;
   padding: 30px 0;
+  display: flex;
+  justify-content: space-between;
+  width: 142px;
+  margin: 0 auto;
 }
 
 .social-list__item {
@@ -19,6 +20,15 @@
   display: block;
   width: 100%;
   height: 100%;
+
+  &:hover svg {
+    fill: $accent-color;
+  }
+
+  &:active svg {
+    fill: $accent-color;
+    opacity: 0.3;
+  }
 }
 
 @media (min-width: $tablet-width) {
