--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -9,6 +9,8 @@ $white: #ffffff;
 $background-section-color: #f1f1f1;
 $play-button-color: #63d1bb;
 $toggle-color: #231f20;
+$categories-icon-color: #149080;
+$footer-border-color: #e5e5e5;
 
 $font-family: "Open Sans", "Arial", sans-serif;
 
