--- a/source/sass/blocks/categories-list.scss
+++ b/source/sass/blocks/categories-list.scss
@@ -77,6 +77,10 @@
     font-size: 20px;
     line-height: 30px;
     padding: 25px 167px 34px 36px;
+
+    &:hover {
+      transform: translateY(-5px);
+    }
   }
 }
 
