Добавляет декоративные элементы в каталоге

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -17,8 +17,7 @@
   }
 
   &:active {
-    color: $white;
+    color: rgba($white, 0.3);
     background-color: $primary-color;
-    opacity: 0.3;
   }
 }
