--- a/source/sass/blocks/main-inner.scss
+++ b/source/sass/blocks/main-inner.scss
@@ -16,6 +16,20 @@
 
   .main-inner__title-wrapper {
     padding-top: 101px;
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -6px;
+      left: 0;
+      height: 24px;
+      width: 100%;
+      z-index: 10;
+      background-image: url('../img/zigzag-white-tablet.svg');
+      background-repeat: repeat-x;
+      background-position: bottom;
+    }
   }
 }
 
