--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -17,11 +17,11 @@
   background-position: center;
 
   &--prev {
-    background-image: url('../img/slider-arrow-left.svg');
+    background-image: url("../img/slider-arrow-left.svg");
   }
 
   &--next {
-    background-image: url('../img/slider-arrow-right.svg');
+    background-image: url("../img/slider-arrow-right.svg");
   }
 
   &:hover {
