--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -75,7 +75,7 @@
       right: 3px;
       width: 47px;
       height: 81px;
-      background-image: url('../img/contacts-flag.svg');
+      background-image: url("../img/contacts-flag.svg");
     }
   }
 
@@ -131,7 +131,6 @@
   }
 
   .contacts__title {
-
     &::after {
       right: 0;
       left: -111px;
