--- a/source/sass/blocks/inner-header.scss
+++ b/source/sass/blocks/inner-header.scss
@@ -26,7 +26,7 @@
       height: 24px;
       width: 100%;
       z-index: 10;
-      background-image: url('../img/zigzag-white-tablet.svg');
+      background-image: url("../img/zigzag-white-tablet.svg");
       background-repeat: repeat-x;
       background-position: bottom;
     }
@@ -43,7 +43,7 @@
     width: 1050px;
 
     &::after {
-      background-image: url('../img/zigzag-white-desktop.svg');
+      background-image: url("../img/zigzag-white-desktop.svg");
       height: 34px;
       bottom: -12px;
     }
