--- a/source/sass/blocks/main-inner.scss
+++ b/source/sass/blocks/main-inner.scss
@@ -26,7 +26,7 @@
       height: 24px;
       width: 100%;
       z-index: 10;
-      background-image: url('../img/zigzag-white-tablet.svg');
+      background-image: url("../img/zigzag-white-tablet.svg");
       background-repeat: repeat-x;
       background-position: bottom;
     }
@@ -40,5 +40,11 @@
 
   .main-inner__title-wrapper {
     padding: 103px 0 96px;
+
+    &::after {
+      background-image: url("../img/zigzag-white-desktop.svg");
+      height: 34px;
+      bottom: -12px;
+    }
   }
 }
