--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -8,7 +8,7 @@
   }
 
   &:active .product-card__wrapper {
-    box-shadow: 0px 3px 5px rgba($secondary-color, 0.1);
+    box-shadow: 0 3px 5px rgba($secondary-color, 0.1);
   }
 }
 
