--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -9,7 +9,7 @@
   }
 
   &:active .production__wrapper {
-    box-shadow: 0px 3px 5px rgba($secondary-color, 0.1);
+    box-shadow: 0 3px 5px rgba($secondary-color, 0.1);
   }
 }
 
@@ -26,7 +26,7 @@
     left: 34px;
     width: 33px;
     height: 33px;
-    background-image: url('../img/production-video.svg');
+    background-image: url("../img/production-video.svg");
     background-repeat: no-repeat;
   }
 }
@@ -53,7 +53,7 @@
     transition: transform 0.8s;
   }
 
-  &:hover svg{
+  &:hover svg {
     transform: scale(1.2);
   }
 
