--- a/source/sass/blocks/main-inner.scss
+++ b/source/sass/blocks/main-inner.scss
@@ -15,7 +15,7 @@
   }
 
   .main-inner__title-wrapper {
-    padding-top: 101px;
+    padding-top: 57px;
     position: relative;
 
     &::after {
@@ -39,7 +39,7 @@
   }
 
   .main-inner__title-wrapper {
-    padding: 103px 0 96px;
+    padding-bottom: 96px;
 
     &::after {
       background-image: url("../img/zigzag-white-desktop.svg");
