--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -138,11 +138,13 @@
   }
 
   .main-nav {
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 17% 33% 50%;
+    align-items: center;
   }
 
   .main-nav__logo {
-    padding: 22px 0 20px;
+    padding: 0;
 
     &:hover {
       opacity: 0.6;
@@ -157,20 +159,35 @@
     flex-direction: row;
 
     &--site {
-      position: absolute;
-      bottom: -64px;
+      grid-column: 1/3;
+      order: 3;
+      position: relative;
+
+      &::before {
+        content: "";
+        position: absolute;
+        left: -50px;
+        height: 100%;
+        width: 100vw;
+        z-index: -10;
+        background-color: $inner-header-bg-color;
+        border-top: 1px solid $border-color;
+      }
+
+      .main-nav__item {
+        width: 50%;
+      }
 
       .main-nav__link {
         padding: 20px 0;
-        width: 167px;
         font-size: 15px;
         line-height: 24px;
       }
     }
 
     &--user {
-      max-width: 400px;
-      margin-left: auto;
+      grid-column: 2/4;
+      justify-self: end;
 
       .main-nav__link {
         border-left: 1px solid $border-color;
@@ -184,7 +201,7 @@
 
     &--search {
       width: 82px;
-      height: 100%;
+      height: 88px;
       padding: 0;
 
       span {
@@ -212,22 +229,31 @@
 
   .main-nav__text {
     display: block;
-    position: absolute;
-    right: 0;
-    bottom: -44px;
+    order: 4;
+    justify-self: end;
+  }
+
+  .main-nav--inner {
+    .main-nav__list--site::before {
+      background-color: $background-section-color;
+    }
   }
 }
 
 @media (min-width: $desktop-width) {
   .main-nav {
-    justify-content: space-between;
+    grid-template-columns: 43% 15% 42%;
   }
 
   .main-nav__list {
     &--site {
-      position: static;
-      order: -1;
-      max-width: 410px;
+      order: 1;
+      grid-column: 1/2;
+      background-color: transparent;
+
+      &::before {
+        content: none;
+      }
 
       .main-nav__link {
         padding: 32px 0 31px;
@@ -245,14 +271,19 @@
 
     &--promo {
       display: flex;
-      max-width: 700px;
-      position: absolute;
-      bottom: -66px;
-      left: 0;
-      z-index: 2;
+      order: 4;
+      position: relative;
+      justify-content: space-between;
 
-      .main-nav__item:not(:last-child) {
-        margin-right: 35px;
+      &::before {
+        content: "";
+        position: absolute;
+        left: calc((100vw - 100% / 0.43) / 2 * -1);
+        height: 100%;
+        width: 100vw;
+        z-index: -10;
+        background-color: $inner-header-bg-color;
+        border-top: 1px solid $border-color;
       }
 
       .main-nav__link {
@@ -262,8 +293,23 @@
     }
 
     &--user {
-      margin: 0;
-      max-width: 360px;
+      order: 3;
+      grid-column: 3/4;
+    }
+  }
+
+  .main-nav__logo {
+    order: 2;
+  }
+
+  .main-nav__text {
+    order: 5;
+    grid-column: 3/4;
+  }
+
+  .main-nav--inner {
+    .main-nav__list--promo::before {
+      background-color: $background-section-color;
     }
   }
 }
