--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -11,6 +11,7 @@ $play-button-color: #63d1bb;
 $toggle-color: #231f20;
 $categories-icon-color: #149080;
 $footer-border-color: #e5e5e5;
+$inner-header-bg-color: #fafafa;
 
 $font-family: "Open Sans", "Arial", sans-serif;
 
