--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,10 +1,9 @@
 .contacts__wrapper {
-  padding: 40px 0;
+  padding-top: 40px;
 }
 
 .contacts__top {
-  width: 260px;
-  margin: 0 auto;
+  padding: 0 30px;
 }
 
 .contacts__title {
@@ -27,12 +26,13 @@
   line-height: 20px;
   border-collapse: collapse;
   margin: 0 0 60px;
+  width: 100%;
 }
 
 .contacts__table tbody {
   display: flex;
   flex-direction: column;
-  width: 260px;
+  width: 100%;
 }
 
 .contacts__table td {
@@ -40,7 +40,7 @@
   padding: 12px 0;
 
   &:first-child {
-    width: 76px;
+    width: 29%;
   }
 }
 
@@ -49,19 +49,16 @@
 }
 
 .contacts__write {
-  width: 260px;
-  margin: 0 auto;
+  margin: 0 30px 30px;
 }
 
 @media (min-width: $tablet-width) {
   .contacts__wrapper {
     padding: 70px 0 60px;
-    width: 768px;
-    margin: 0 auto;
   }
 
   .contacts__top {
-    width: 668px;
+    padding: 0 50px;
   }
 
   .contacts__title {
@@ -91,43 +88,42 @@
   }
 
   .contacts__table tr {
-    min-width: 315px;
+    width: 50%;
   }
 
   .contacts__table td {
     border: none;
   }
 
-  .contacts__table tr:not(:last-child) {
-    margin-right: 25px;
-  }
-
   .contacts__table td:first-child {
-    width: 82px;
+    width: 25%;
   }
 
   .contacts__map-wrapper {
-    width: 768px;
+    width: 100%;
     height: 457px;
     margin-bottom: 50px;
   }
 
   .contacts__write {
     width: 230px;
+    margin: 0 auto;
   }
 }
 
 @media (min-width: $desktop-width) {
   .contacts__wrapper {
-    padding: 150px 0 105px 175px;
+    padding: 150px 50px 105px 175px;
     position: relative;
-    width: 1050px;
+    max-width: 1050px;
     box-sizing: border-box;
+    margin: 0 auto;
   }
 
   .contacts__top {
     width: 331px;
     margin: 0;
+    padding: 0;
   }
 
   .contacts__title {
@@ -137,22 +133,21 @@
     }
   }
 
+  .contacts__table {
+    margin-bottom: 85px;
+  }
+
   .contacts__table tbody {
     flex-direction: column;
+  }
+
+  .contacts__table tr {
+    width: 100%;
   }
 
   .contacts__map-wrapper {
     position: absolute;
     right: 0;
-    bottom: 105px;
-    width: 527px;
-    height: 457px;
-    margin-bottom: 0;
-  }
-
-  .contacts__map {
-    position: absolute;
-    left: 575px;
     bottom: 105px;
     width: 527px;
     height: 457px;
