--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -260,6 +260,17 @@
 @media (min-width: $desktop-width) {
   .form__group {
     padding: 50px 225px;
+    position: relative;
+
+    &:nth-of-type(even)::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: calc((100vw - 1150px) / 2 * -1);
+      width: 100vw;
+      height: 100%;
+      background-color: $background-section-color;
+    }
 
     &--checkbox {
       padding-right: 100px;
