--- a/source/sass/blocks/inner-header.scss
+++ b/source/sass/blocks/inner-header.scss
@@ -2,20 +2,28 @@
   display: block;
   width: 260px;
   text-align: center;
-  margin: 73px auto 120px auto;
+  margin: 0 auto 120px auto;
 }
 
+.inner-header {
+  padding-top: 73px;
+  background-image: url("../img/inner-header-bg-mobile.jpg");
+  background-repeat: no-repeat;
+  background-position: 50% -17px;
+  background-color: $inner-header-bg-color;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/inner-header-bg-mobile@2x.jpg");
+    background-size: 320px auto;
+  }
+}
 
 @media (min-width: $tablet-width) {
-  .inner-header__title {
-    margin: 0 auto 372px auto;
-    width: 668px;
-  }
-
-  .inner-header__wrapper {
-    padding: 155px 50px 0;
-    width: 668px;
-    margin: 0 auto;
+  .inner-header {
+    padding-top: 109px;
+    background-image: url("../img/inner-header-bg-tablet.jpg");
+    background-position: 50% -50px;
+    background-size: 768px auto;
     position: relative;
 
     &::after {
@@ -30,22 +38,46 @@
       background-repeat: repeat-x;
       background-position: bottom;
     }
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/inner-header-bg-tablet@2x.jpg");
+    }
+  }
+
+  .inner-header__title {
+    margin: 0 auto 372px auto;
+    width: 668px;
+  }
+
+  .inner-header__wrapper {
+    padding: 0 50px;
   }
 }
 
 @media (min-width: $desktop-width) {
-  .inner-header__title {
-    margin: 0 auto 355px auto;
-    width: 700px;
-  }
-
-  .inner-header__wrapper {
-    width: 1050px;
+  .inner-header {
+    padding-top: 114px;
+    background-image: url("../img/inner-header-bg-desktop.jpg");
+    background-size: 1150px auto;
 
     &::after {
       background-image: url("../img/zigzag-white-desktop.svg");
       height: 34px;
       bottom: -12px;
     }
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/inner-header-bg-desktop@2x.jpg");
+    }
+  }
+
+  .inner-header__title {
+    margin: 0 auto 355px auto;
+    width: 700px;
+  }
+
+  .inner-header__wrapper {
+    max-width: 1050px;
+    margin: 0 auto;
   }
 }
