--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -5,11 +5,11 @@
 .main-footer__wrapper {
   display: flex;
   flex-direction: column;
+  padding: 0 30px;
 }
 
 .main-footer__logo {
   display: none;
-  cursor: pointer;
 }
 
 .main-footer__social {
@@ -17,12 +17,12 @@
 
   &::after {
     content: "";
-    width: 260px;
+    width: 100%;
     height: 1px;
     background-color: $footer-border-color;
     position: absolute;
     bottom: 0;
-    left: -60px;
+    left: 0;
   }
 }
 
@@ -53,8 +53,6 @@
 @media (min-width: $tablet-width) {
   .main-footer__wrapper {
     padding: 50px 50px 60px;
-    width: 668px;
-    margin: 0 auto;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -62,6 +60,7 @@
 
   .main-footer__logo {
     display: block;
+    cursor: pointer;
     width: 101px;
     height: 34px;
 
@@ -92,6 +91,7 @@
 
 @media (min-width: $desktop-width) {
   .main-footer__wrapper {
-    width: 1050px;
+    max-width: 1050px;
+    margin: 0 auto;
   }
 }
