--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -1,12 +1,12 @@
 @media (min-width: $tablet-width) {
   .main-header__wrapper {
-    width: 668px;
-    margin: 0 auto;
+    padding: 0 50px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .main-header__wrapper {
-    width: 1050px;
+    max-width: 1050px;
+    margin: 0 auto;
   }
 }
