--- a/source/sass/blocks/order.scss
+++ b/source/sass/blocks/order.scss
@@ -8,8 +8,7 @@
 }
 
 .order__wrapper {
-  width: 260px;
-  margin: 0 auto;
+  padding: 0 30px;
 }
 
 .order__text {
@@ -22,8 +21,7 @@
 
 @media (min-width: $tablet-width) {
   .order__wrapper {
-    width: 768px;
-    margin: 0 auto;
+    padding: 0;
   }
 
   .order__text {
@@ -36,7 +34,8 @@
 
 @media (min-width: $desktop-width) {
   .order__wrapper {
-    width: 1150px;
+    max-width: 1150px;
+    margin: 0 auto;
   }
 
   .order__text {
