--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -1,5 +1,4 @@
 .product-card {
-  border: 1px solid $border-color;
   display: flex;
   flex-direction: column;
 
@@ -13,13 +12,14 @@
 }
 
 .product-card__image {
-  width: 260px;
-  height: 195px;
-  outline: 3px solid #ff0000;
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
 .product-card__wrapper {
   padding: 27px 27px 26px 28px;
+  border: 1px solid $border-color;
 }
 
 .product-card__link {
@@ -93,15 +93,14 @@
     flex-direction: row;
   }
 
-  .product-card__image {
-    width: 334px;
-    height: 334px;
+  .product-card__link-image {
+    width: 50%;
   }
 
   .product-card__wrapper {
     display: flex;
     flex-direction: column;
-    width: 334px;
+    width: 50%;
     box-sizing: border-box;
     padding: 27px 32px 25px 34px;
   }
@@ -140,6 +139,10 @@
     width: 100%;
     padding: 27px 31px 25px 28px;
     min-height: 197px;
+  }
+
+  .product-card__link-image {
+    width: 100%;
   }
 
   .product-card__info {
