--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -48,8 +48,13 @@
   .reviews__wrapper {
     padding: 82px 50px 50px;
     position: relative;
-    width: 668px;
-    margin: 0 auto;
+    background-image: url("../img/review-bg-tablet.jpg");
+    background-repeat: no-repeat;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/review-bg-tablet@2x.jpg");
+      background-size: 350px auto;
+    }
   }
 
   .reviews__title {
@@ -90,8 +95,12 @@
 
   .reviews__wrapper {
     padding: 80px 0 100px 175px;
-    width: 1050px;
-    box-sizing: border-box;
+    max-width: 1150px;
+    background-image: url("../img/review-bg-desktop.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/review-bg-desktop@2x.jpg");
+    }
   }
 
   .reviews__write {
