--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -1,19 +1,14 @@
 .social-list {
   list-style-type: none;
   padding: 30px 0;
+  margin: 0;
   display: flex;
-  justify-content: space-between;
-  width: 142px;
-  margin: 0 auto;
-}
-
-.social-list__item {
-  width: 30px;
-  height: 20px;
+  justify-content: center;
+  width: 100%;
 }
 
 .social-list__item:not(:last-child) {
-  margin-right: 10px;
+  margin-right: 32px;
 }
 
 .social-list__link {
